# swagger-output.json
@@ -259,6 +259,24 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "brand": {
+                  "example": "any"
+                },
+                "model": {
+                  "example": "any"
+                },
+                "series": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
